<resources>
    <string name="app_name">Tracker</string>

    // Permission
    <string name="permission_rationale">You need to accept location permission to use this app.</string>

    // Welcome page
    <string name="welcome_page">Please set your personal information.</string>
    <string name="name_hint">Name</string>
    <string name="weight_hint">Weight</string>
    <string name="height_hint">Height</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="next">Next</string>
    <string name="reset">Reset</string>

    <string name="bmi_label">Your BMI</string>
    <string name="category_label">Your Category</string>
    <string name="healthy_weight"><![CDATA[Your healthy weight range is <b>%s</b> to <b>%s</b>.]]></string>

    //Bottom Navigation
    <string name="statistics">Statistics</string>
    <string name="account">Account</string>
    <string name="home">Home</string>

    // Home page
    <string name="date">%s</string>
    <string name="time">Time: %s</string>
    <string name="distance">%s km</string>
    <string name="avg_speed">%s km/h</string>
    <string name="calories">%s kcal</string>

    // Tracking page
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="cancel_run">Cancel Run</string>
    <string name="finish_run">Finish Run</string>

    // Statistics page
    <string name="total_distance_label">Total Distance</string>
    <string name="total_distance">%s km</string>
    <string name="total_time_label">Total Time</string>
    <string name="total_time">00:00:00</string>
    <string name="total_calories_burned_label">Total Calories Burned</string>
    <string name="total_calories_burned">%s kcal</string>
    <string name="average_speed_label">Average Speed</string>
    <string name="average_speed">%s km/h</string>

    // Account page
    <string name="logout">Logout</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="personal_info">Personal information</string>

    // Dialog
    <string name="cancel_run_title">Cancel the run?</string>
    <string name="cancel_run_message">Are you sure you want to cancel the current run and delete all its data?</string>
    <string name="logout_message">Are you sure you want to log out and delete all your data?</string>
    <string name="delete_item_title">Delete?</string>
    <string name="delete_item_message">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    // Toolbar
    <string name="lets_go">Let\'s go, %s</string>
    <string name="your_statistics">Your Statistics</string>
    <string name="sort_by">Sort by:</string>
    <string-array name="filter_options">
        <item>Date</item>
        <item>Distance</item>
        <item>Running Time</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>
</resources>