<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StatisticsFragment">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <include
        android:id="@+id/emptyPage"
        layout="@layout/item_empty_page"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/statisticsFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">


        <TextView
            android:id="@+id/txtTotalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/total_time"
            android:textSize="40sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTotalTimeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_time_label"
            app:layout_constraintEnd_toEndOf="@+id/txtTotalTime"
            app:layout_constraintStart_toStartOf="@+id/txtTotalTime"
            app:layout_constraintTop_toBottomOf="@id/txtTotalTime" />


        <TextView
            android:id="@+id/txtTotalDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_distance"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/txtTotalTime" />


        <TextView
            android:id="@+id/txtTotalDistanceInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_distance_label"
            app:layout_constraintEnd_toEndOf="@+id/txtTotalDistance"
            app:layout_constraintStart_toStartOf="@+id/txtTotalDistance"
            app:layout_constraintTop_toBottomOf="@+id/txtTotalDistance" />


        <TextView
            android:id="@+id/txtTotalCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/total_calories_burned"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@id/txtTotalCaloriesInfo"
            app:layout_constraintEnd_toEndOf="@+id/txtTotalTime"
            app:layout_constraintStart_toStartOf="@+id/txtTotalTime"
            app:layout_constraintTop_toBottomOf="@+id/txtTotalTimeInfo" />

        <TextView
            android:id="@+id/txtTotalCaloriesInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_calories_burned_label"
            app:layout_constraintEnd_toEndOf="@+id/txtTotalCalories"
            app:layout_constraintStart_toStartOf="@+id/txtTotalCalories"
            app:layout_constraintTop_toBottomOf="@+id/txtTotalCalories" />


        <TextView
            android:id="@+id/txtAverageSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/average_speed"
            android:textSize="40sp"

            app:layout_constraintEnd_toEndOf="@+id/txtTotalDistance"
            app:layout_constraintStart_toStartOf="@+id/txtTotalDistance"
            app:layout_constraintTop_toTopOf="@+id/txtTotalCalories" />


        <TextView
            android:id="@+id/txtAverageSpeedInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/average_speed_label"
            app:layout_constraintEnd_toEndOf="@+id/txtAverageSpeed"
            app:layout_constraintStart_toStartOf="@+id/txtAverageSpeed"
            app:layout_constraintTop_toBottomOf="@+id/txtAverageSpeed" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barChart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>